--- a/Assets/SteamVR_Input/SteamVR_Actions.asmdef
+++ b/Assets/SteamVR_Input/SteamVR_Actions.asmdef
@@ -1,16 +1,17 @@
 {
-  "name": "SteamVR_Actions",
-  "references": [
-    "SteamVR"
-  ],
-  "optionalUnityReferences": [],
-  "includePlatforms": [],
-  "excludePlatforms": [
-    "Android"
-  ],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": []
+    "name": "SteamVR_Actions",
+    "references": [
+        "SteamVR"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [
+        "Android"
+    ],
+    "allowUnsafeCode": true,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
