--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# Folders to ignore on Liam's PC
+/Prototype Showcase/
+/Work Log/
